[package]
name = "puzzles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
unwrap_used = "warn"

[dependencies]
ab_glyph = "0.2.25"
axum = "0.7.5"
image = "0.25.1"
imageproc = "0.24.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
