[package]
name = "puzzles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
unwrap_used = "warn"

[dependencies]
ab_glyph = "0.2.25"
axum = "0.7.5"
image = "0.25.1"
imageproc = "0.25.0"
rand = "0.8.5"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["set-header"] }
