[package]
name = "puzzle-utils"
version = "0.1.0"
authors = ["J164"]
rust-version = "1.79.0"
edition = "2021"
license = "MIT"
description = "Puzzle solving utilities"
repository = "https://github.com/J164/puzzle-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
unwrap_used = "warn"

[dependencies]
ab_glyph = "0.2.28"
image = "0.25.1"
imageproc = "0.25.0"
rand = "0.8.5"
thiserror = "1.0.62"
